[gd_scene load_steps=7 format=2]

[ext_resource path="res://weapons/stormbreaker.gd" type="Script" id=1]
[ext_resource path="res://art/stormbreaker.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.67077, 13.1718 )

[sub_resource type="Animation" id=2]
resource_name = "attack1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sowrdhit/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -59.9999, 150.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 10, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect/beamhit/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 89.9999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, -17 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sowrdhit/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect/beamhit/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.902476, 2.07907 )

[node name="stormbreaker" type="Sprite"]
position = Vector2( 10, -17 )
rotation = 1.57079
scale = Vector2( 1.00696, 1 )
z_index = -1
texture = ExtResource( 3 )
hframes = 2
script = ExtResource( 1 )

[node name="sowrdhit" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="sowrdhit"]
position = Vector2( 17.2182, -35.8502 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 2 )
anims/attack2 = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 17.9749
margin_top = -20.0175
margin_right = 19.9749
margin_bottom = -16.0175
grow_horizontal = 2
rect_rotation = 180.0
rect_scale = Vector2( 1, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouth" type="Position2D" parent="ColorRect"]
position = Vector2( -2.7979, 9.12058 )
rotation = 3.14159
scale = Vector2( 1, 0.5 )

[node name="beamhit" type="Area2D" parent="ColorRect"]
collision_layer = 2148007952
collision_mask = 524304
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/beamhit"]
position = Vector2( 0.892107, 2.02408 )
shape = SubResource( 4 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="blood" type="Node" parent="."]
[connection signal="body_entered" from="sowrdhit" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="body_entered" from="ColorRect/beamhit" to="." method="_on_beamhit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
